Cambios realizados modulo de contabilidad - clonar catalago